# ballbot

./: README  robot.py
arduino/: Arduino.mk  Gyro.pde  Makefile  controller.pde  hwservo.cpp  hwservo.h  packet.c  packet.h
arduino/Gyro_encoder_plot/: Ard_send_d_theta_to_process.pde  Arduino_sends_xy_to_processing.pde  plot_xy_serial.pde
arduino/ballbotcode/: Makefile  ballbotcode.pde  encoder.cpp  encoder.h  packet.h
arduino/ballbotcode_edit/: ballbotcode_edit.pde  packet.h
arduino/base_controller/: Makefile  PID_v1.cpp  PID_v1.h  SoftwareSerial.cpp  SoftwareSerial.h  base_controller.h  base_controller.pde  encoder.cpp  encoder.h  feedback.cpp  feedback.h  imu.cpp  imu.h  packet.cpp  packet.h  pickup.h  smc.cpp  smc.h  vsync.cpp  vsync.h
arduino/ckdevices_9DOF_AHRS_1_0/: ADXL345.pde  ApplicationRoutines.pde  BMP085.pde  DCM.pde  HMC5883L.pde  ITG3200.pde  Output.pde  README.txt  ckdevices_9DOF_AHRS_1_0.pde  packet.h
arduino/controller/: Makefile  controller.pde  hwservo.cpp  packet.c
demos/: Ballbotmotion.py~  Ballbotmotion_test.py~  control.py  interface.py
demos/MotionPlanning/: Ballbotmotion.py  Ballbotmotion_first.py  Ballbotmotion_test.py  RCRRT.py  RCRRT.py~  dubins.py  util.py
demos/ballfinding/: Makefile  control.py  main  main.cpp  (+3 more)
localization/: filter.py  kalman.py  models.py  test.py~
pathing/: RCRRT_multipledubins.py  ballbotmotion.py  ballbotmotion_plot.py  dubins.py  util.py
ros_packages/: goal_msg.msg
ros_packages/court_localization/: CMakeLists.txt  a.out  datacollect.launch  export.launch  mainpage.dox  manifest.xml  particle_filter.h  pf.launch  retimestamp.py
ros_packages/court_localization/nodes/: demo_viewer.py  odometry_viewer.py  particle_viewer.py  pose_viewer.py
ros_packages/court_localization/src/: backproject  backproject.cpp  backproject.h  court_localization.cpp  differentiation.cpp  differentiation.h  ekf_localization.cpp  findlines  findlines.cpp  findlines.h  findlines_gui.cpp  geometry.cpp  geometry.h  matlab_export.cpp  particle_filter.cpp  particle_filter.h
stereocapture/: cam_param_huge.txt  camera_parameters_640x480.txt  camera_parameters_left.txt  camera_parameters_right.txt
(+375 files in other folders)
